--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 3rem;
-    font-weight: 600;
+    font-weght: 600;
     font-size: x-large;
 }
 
