--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
 
 #opening-screen {
 /* To display chagne display to flex */
-    display: flex;
+    display: none;
 
     flex-direction: column;
     justify-content: flex-end;
@@ -130,27 +130,53 @@ body {
 /* game container - screen III */
 
 #game-container {
-    display: none;
+    display: block;
     flex-direction: column;
     width: 100vw;
-    padding: 20px 0px;
     justify-content: center;
     width: 100vw;
     height: 100vh;
+}
+
+#skyline {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    background-image: url(../images/beautiful-landscape-view-ocean.jpg);
+    background-size: cover;
+    background-position: bottom;
+    height: 50vh;
+    width: 100vw;
+}
+
+.live-stats {
+    padding: 20px;
 }
 
 #game-screen {
     display: block;
     overflow: hidden;
     position: absolute;
-    background-image: url(../images/perspective.jpg);
+    background-image: url(../images/roada.jpg);
     background-size: cover;
     animation: slide 5s linear infinite;
     width: 100vw;
-    height: 100vh;
+    height: 50vh;
   }
 
+  #game-screen img:first-of-type {
+    width: 100vw;
+    height: 50vh;
+  }
  
+  #player {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 50px;
+    height: 50px;
+    z-index: 1;
+  }
 
 /* next-levels or game over - screen IV */
 
