roar strip completed

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,10 @@ body {
 }
 
 #start:hover {  
-    opacity: 0.5;
+    opacity: 0.8;
+    background-color: rgb(158, 255, 13);
+    color: rgb(94, 12, 12);
+    font-weight: 800;
 }
 
 #opening-screen p {
@@ -148,10 +151,7 @@ body {
 #game-container {
     display: none;
     flex-direction: column;
-    width: 100vw;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
     font-weight: 600;
 }
 
@@ -172,13 +172,44 @@ body {
 
 #game-screen {
     display: block;
-    overflow: hidden;
-    position: absolute;
-    background-image: url(../images/roada.jpg);
+    /* background-image: url(../images/road.jpg); */
     background-size: cover;
-    animation: slide 5s linear infinite;
     width: 100vw;
     height: 50vh;
+    position: absolute;
+    top:50vh;
+    z-index: -1;
+}
+
+#game-road{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-image: url(../images/road-strip.png);
+    background-size: cover;
+    animation: slide 5s linear infinite;
+    width: 2vw;
+    height: 72vh;
+    animation: slide 3s linear infinite;
+    z-index: 1;
+    position: fixed;
+    overflow: hidden;
+    top: 27vh;
+    left: 47vw;
+  }
+
+  
+
+  @keyframes slide {
+    0% {
+      background-position: 0 -1000px;
+    }
+    95% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 0 50px;
+    }
   }
 
   #game-screen img:first-of-type {
