--- a/styles/style.css
+++ b/styles/style.css
@@ -174,14 +174,6 @@ body {
     animation: cloud 500s linear infinite ;
 } 
 
-/* #clouds {
-    position: absolute;
-    background-image: url(../images/cartoonCloud.png);
-    animation: cloud 10s linear infinite ;
-    height: 100vh;
-    width: 100vw;
-} */
-
 @keyframes cloud {
     0% {
         background-position: 0 0;
@@ -200,6 +192,13 @@ body {
 .live-stats p { 
     margin-bottom: 2rem;
     font-size: x-large;
+}
+
+ /* poping up - disappear  */
+#colision-hapens {
+    display: flex;
+    flex-direction: column-reverse;
+    padding-bottom: 1.5rem;
 }
 
 #game-screen {
@@ -330,4 +329,8 @@ body {
     border: solid 3px rgb(158, 255, 13);
     background-color: rgb(158, 255, 13);
     font-weight: 800;
+}
+
+.win-text{
+
 }
