--- a/styles/style.css
+++ b/styles/style.css
@@ -113,7 +113,7 @@ body {
 
 .button-instruction {
     display: flex;
-    justify-content: center;
+    margin: 2rem 0 0 0;
     flex-direction: column;
     align-items: center;
 }
