Featuer/moving obsticals (#8)
* test commit

* code formatting, and tried to add something on second screen

* code done with a btn JS'

* added runnign man images and game screen

* fix man

* last changes

* something

* running man png

* fixed conflict

* running man - image

* removed unwanted images

* first js commit

* roar strip completed

* initialized player object

* initialized player object

* player jump

* move player and jump

* player moves and jumps

* show obstical

* last working version

* random obstacles

* correctly moving obsticals...

* working all obstacles

* re-sized, player boundaries, moving all Obstacles in all correct dirrections

* separating concerns

* formatting and removed unwanted comments

* boundaries of the player, and some little adgustments

* stable version of moving man with obstacles and collision

* working health and resources logic

* clean up

* better bowndaries of the runner

* moving clound

* last changes

* man new doundaries and sky

* health not beyond 100 , money no less than 0

* fix losing logic

* timer completed - distance

* next-level changed

* last changres from 14.Nov.23

* First level less item, reduce health through time, change in distance for level2, speed update in between screen, added button hover for restart

* win last page

* fix win screen

* added comment for -5

* imagers

* debug second level

* images again

* little changes

* live updates

* fixed errors

* tweaks

---------

Co-authored-by: Pencho Ivanov <penchoivanov@Penchos-Air.home>
Co-authored-by: Pencho Ivanov <penchoivanov@Penchos-MacBook-Air.local>

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,18 +69,18 @@ body {
 #instructions h1 {
     text-align: center;
     font-size: 3rem;
-    margin: 7rem 0 2rem 0;
+    margin: 6rem 0 2rem 0;
 }
 
 #instructions p {
     font-size: 1.4rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0 0 0 ;
 }
 
 #start-game {
     width: 17rem;
-    height: 6rem;
-    margin-bottom: 6.5rem;
+    height: 3.5rem;
+    margin-bottom: 3rem;
     font-weight: 700;
     font-size: larger;
     border-radius: 2rem;
@@ -113,21 +113,20 @@ body {
 
 .button-instruction {
     display: flex;
-    justify-content: center;
+    margin: 2rem 0 0 0;
     flex-direction: column;
     align-items: center;
 }
 
-
 .button-instruction div {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-end;
 }
 
 /* instruction btn arrow */
 .button-instruction div:first-of-type img {
-    height: 3rem;
-    margin-bottom: 1rem;
+    height: 1.5rem;
 } 
 
 .button-instruction div:first-of-type p {
@@ -151,6 +150,27 @@ body {
     width: 20vw;
 }
 
+/* table */
+.table-instruction {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table-instruction th {
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: rgba(255, 255, 255, 0.612);
+    font-weight: 900;
+    
+}
+
+.table-instruction th, .table-instruction td {
+    padding: 0 1rem;
+    text-align: left;
+}
+
+.obstacles-show {
+    height: 0.5rem;
+}
 
 /* game container - screen III */
 
@@ -331,6 +351,13 @@ body {
     font-weight: 800;
 }
 
+/* end text */
 .win-text{
-
+    font-weight: bolder;
+    font-size: 3rem;
+    margin-bottom: 4rem;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: white;
+    text-shadow: 2px 4px 6px black;
 }
+
